# anup

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  anitrack.sh  anup.sh  build.rs  default.nix  shell.nix  tranim.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  rust.yml  tests.yml
anime/: Cargo.toml
anime/graphql/anilist/: info_by_id.gql  info_by_name.gql  update_list_entry.gql  user.gql
anime/src/: err.rs  lib.rs
anime/src/local/: mod.rs
anime/src/local/detect/: common.rs  dir.rs  episode.rs  mod.rs
anime/src/local/parse/: default.rs  mod.rs
anime/src/remote/: anilist.rs  mod.rs  offline.rs
anisplit/: Cargo.toml  README.md
anisplit/src/: err.rs  main.rs
anup/: Cargo.toml
anup/sql/: close.sql  pragmas.sql  schema.sql
anup/sql/delete/: series_config.sql
anup/sql/insert/: anime_entry.sql  anime_info.sql  series_config.sql
anup/sql/migrations/: delete_series_info_sequels.sql  rename_episode_matcher.sql
anup/sql/select/: anime_entries_need_sync.sql  anime_entry.sql  anime_info.sql  series_config_by_nickname.sql  series_names.sql
anup/src/: config.rs  database.rs  detect.rs  err.rs  file.rs  key.rs  main.rs  process.rs  remote.rs  series.rs  track.rs  user.rs  util.rs
anup/src/interface/: cli.rs  mod.rs
anup/src/interface/tui/: log.rs  mod.rs  ui.rs
anup/src/interface/tui/component/: command_prompt.rs  mod.rs
anup/src/series/: config.rs  database.rs  entry.rs  info.rs  mod.rs
anup/src/tui/: backend.rs  mod.rs  selection.rs  state.rs  ui.rs
anup/src/tui/component/: command_prompt.rs  episode_watcher.rs  info_panel.rs  input.rs  log.rs  mod.rs  series_list.rs
anup/src/tui/component/main_panel/: add_series.rs  delete_series.rs  info.rs  input.rs  mod.rs  select_series.rs  user_panel.rs
anup/src/tui/component/main_panel/add_series/: inputs.rs  mod.rs
anup/src/tui/component/main_panel/split_series/: add.rs  mod.rs  split.rs
anup/src/tui/component/prompt/: command.rs  log.rs  mod.rs
anup/src/tui/widget_util/: block.rs  color.rs  mod.rs  style.rs  text.rs  widget.rs
detect/: Cargo.toml
detect/src/: err.rs  lib.rs
graphql/anilist/: get_list_entry.gql  info_by_id.gql  info_by_name.gql  update_list_entry.gql  user.gql
src/: anime.rs  config.rs  err.rs  error.rs  file.rs  input.rs  main.rs  process.rs  prompt.rs  series.rs  track.rs  util.rs
src/anime/: local.rs  mal.rs  mod.rs
src/anime/mal/: mod.rs  request.rs
src/backend/: anilist.rs  mod.rs
src/backend/anilist/: mod.rs  serialize.rs
src/libmal/: lib.rs  list.rs  request.rs
src/series/: detect.rs  dir.rs  mod.rs  parse.rs
src/series/local/: mod.rs
src/series/remote/: anilist.rs  mod.rs  offline.rs
