[package]
name = "anup"
version = "0.1.0"
authors = ["Acizza <jgit@tuta.io>"]
build = "build.rs"
edition = "2018"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
base64       = "~0.10.0"
clap         = "~2.32.0"
failure      = "~0.1.0"
directories  = "~1.0.0"
lazy_static  = "~1.2.0"
regex        = "~1.1.0"
reqwest      = "~0.9.0"
serde        = "~1.0.0"
serde_derive = "~1.0.0"
serde_json   = "~1.0.0"
toml         = "~0.4.0"

[dependencies.chrono]
version = "~0.4.0"
features = ["serde"]

[target.'cfg(windows)'.dependencies.winapi]
version = "~0.3.0"
features = ["shellapi", "synchapi"]