[package]
# TODO: rename to anup when rewrite is usable. It is currently named this to avoid conflicts
# with existing configurations made with the old version.
name = "anup-rewrite"
version = "0.0.0"
authors = ["Acizza <jgit@tuta.io>"]
edition = "2018"

[dependencies]
base64 = "~0.10.0"
clap = "~2.33.0"
dirs = "~2.0.0"
hashbrown = "~0.5.0"
lazy_static = "~1.3.0"
toml = "~0.5.0"
regex = "~1.1.0"
serde = "~1.0.0"
serde_derive = "~1.0.0"
serde_json = "~1.0.0"
reqwest = "~0.9.0"
rmp-serde = "~0.13.0"
snafu = "~0.4.0"
smallvec = "~0.6.0"
strsim = "~0.9.0"

[dependencies.chrono]
version = "~0.4.0"
features = [ "serde" ]

[profile.release]
lto = true
codegen-units = 1