[package]
name = "anime"
version = "0.1.0"
authors = ["Acizza <jgit@tuta.io>"]
edition = "2018"

[dependencies]
base64 = "~0.12.0"
enum_dispatch = "~0.3.0"
nom = "6.0.0-alpha3"
thiserror = "~1.0.0"
serde = "~1.0.0"
serde_derive = "~1.0.0"
serde_json = "~1.0.0"
smallvec = "~1.4.0"
strsim = "~0.10.0"

[dependencies.chrono]
version = "~0.4.0"
optional = true
default-features = false
features = [ "std" ]

[dependencies.diesel]
version = "~1.4.0"
optional = true
default-features = false
features = [ "sqlite" ]

[dependencies.attohttpc]
version = "0.15"
default-features = false
features = [ "json", "tls-rustls" ]

[features]
default = []
print-requests-debug = []
diesel-support = [ "diesel" ]
chrono-support = [ "chrono" ]