[package]
name = "anime"
version = "0.1.0"
authors = ["Acizza <jgit@tuta.io>"]
edition = "2018"

[dependencies]
base64 = "0.13"
enum_dispatch = "0.3"
nom = "7.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
smallvec = "1.7"
strsim = "0.10"
thiserror = "1.0"

[dependencies.chrono]
version = "0.4"
optional = true
default-features = false
features = [ "std" ]

[dependencies.diesel]
version = "1.4"
optional = true
default-features = false
features = [ "sqlite" ]

[dependencies.attohttpc]
version = "0.18"
default-features = false
features = [ "json", "tls-rustls" ]

[features]
default = []
print-requests-debug = []
diesel-support = [ "diesel" ]
chrono-support = [ "chrono" ]
