[package]
name = "anup"
version = "0.1.0"
authors = ["Acizza <jgit@tuta.io>"]
edition = "2018"
default-run = "anup"

[dependencies]
anyhow = "1.0"
argh = "0.1"
bincode = "1.3"
bitflags = "1.2"
chrono = "0.4"
dirs-next = "2.0"
futures = "0.3"
futures-timer = "3.0"
once_cell = "1.4"
thiserror = "1.0"
toml = "0.5"
tui-utils = { git = "https://github.com/Acizza/tui-utils", rev = "0.3.0" }
serde = "1.0"
serde_derive = "1.0"
smallvec = "1.4"
strsim = "0.10"
unicode-segmentation = "1.6"
unicode-width = "0.1"

time = "0.1"

[dependencies.anime]
path = "../anime"
features = [ "diesel-support", "chrono-support" ]

[dependencies.async-std]
version = "1.8"
features = [ "attributes" ]

[dependencies.crossterm]
version = "0.19"
features = [ "event-stream", "serde" ]

[dependencies.diesel]
version = "1.4"
default-features = false
features = [ "sqlite" ]

[dependencies.pico-args]
version = "0.4"
default-features = false

[dependencies.tui]
version = "0.14"
default-features = false
features = [ "crossterm" ]