[package]
name = "anup"
version = "0.4.0"
authors = ["Acizza <jgit@tuta.io>"]
edition = "2018"
default-run = "anup"

[dependencies]
anyhow = "1.0"
argh = "0.1"
bincode = "1.3"
bitflags = "1.2"
chrono = "0.4"
dirs-next = "2.0"
futures = "0.3"
once_cell = "1.8"
parking_lot = "0.11"
ron = "0.6"
serde = "1.0"
serde_derive = "1.0"
smallvec = "1.4"
strsim = "0.10"
thiserror = "1.0"
tui-utils = { git = "https://github.com/Acizza/tui-utils", rev = "0.11.0" }
unicode-segmentation = "1.8"
unicode-width = "0.1"

[dependencies.anime]
path = "../anime"
features = [ "diesel-support", "chrono-support" ]

[dependencies.crossterm]
version = "0.20"
features = [ "event-stream", "serde" ]

[dependencies.diesel]
version = "1.4"
default-features = false
features = [ "sqlite" ]

[dependencies.pico-args]
version = "0.4"
default-features = false

[dependencies.tokio]
version = "1.9"
features = [ "rt", "signal", "process", "time", "sync", "parking_lot" ]

[dependencies.tui]
version = "0.15"
default-features = false
features = [ "crossterm" ]
